# sonoUno-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: build.yml  build_mongodb.yml  pre-commit.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-dev  README.md  pyproject.toml
backend/demo/: Dockerfile  build.sh  demo_client.ipynb  shortwav.py
backend/docs/: contributing.md  getting_started.md  index.md
backend/scripts/: gen_salt.py  run-tests.sh
backend/sonouno_server/: __init__.py  app.py  config.py  executors.py  jwt.py  main.py  schemas.py  types.py
backend/sonouno_server/models/: __init__.py  iam.py  jobs.py  system.py  transforms.py  users.py  variables.py
backend/sonouno_server/routes/: iam.py  jobs.py  system.py  transforms.py  users.py
backend/sonouno_server/util/: __init__.py  call_dependencies.py  current_user.py  encoders.py  io.py  job_builder.py  mail.py  minio.py  password.py  schemas.py  transform_builder.py
backend/tests/: conftest.py  data.py  util.py
backend/tests/routes/: test_iam.py  test_jobs.py  test_transforms.py  test_user.py
backend/tests/unit/: test_config.py
backend/tests/unit/util/: test_call_dependencies.py  test_schemas.py  test_transform_builder.py
compose/: .env  build-dev.sh  build.sh  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  rm.sh  run-dev.sh  run-tests-backend.sh  run.sh
mongo-express/: Dockerfile  docker-entrypoint.sh
mongodb/: Dockerfile
mongodb/initdb.d/: create-app-user.sh
nginx/: Dockerfile  nginx.conf
sonouno_server/: app.py  config.py  main.py
sonouno_server/models/: iam.py  transforms.py
sonouno_server/routes/: users.py
sonouno_server/util/: current_user.py  mail.py
tests/: conftest.py  data.py  util.py
