[tool.poetry]
name = "sonouno_server"
version = "0.0.0"
description = "A scientific data sonification platform."
authors = ["Pierre Chanial <pierre.chanial@apc.in2p3.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.72.0"
beanie = "^1.8.12"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^3.2.0"
uvicorn = "^0.17.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-decouple = "^3.6"
networkx = "^2.8"
apischema = "^0.17.5"
streamunolib = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.17.1"
httpx = "^0.21.3"
pytest-cov = "^3.0.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
bump = true
style = "pep440"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
