[tool.poetry]
name = "sonouno_server"
version = "0.0.0"
description = "A scientific data sonification platform."
authors = ["Pierre Chanial <pierre.chanial@apc.in2p3.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
fastapi = "^0.72.0"
beanie = "^1.8.12"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^3.2.0"
uvicorn = "^0.17.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-decouple = "^3.6"
networkx = "^2.8"
apischema = "^0.17.5"
streamunolib = "^0.4"
minio = "^7.1.8"
scipy = "^1.8.0"
Pillow = "^9.1.1"
sonounolib = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.17.1"
httpx = "^0.21.3"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.16"
markdown-include = "^0.6.0"
mkdocs-exclude = "^1.0.2"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
bump = true
style = "pep440"

[build-system]
requires = ["poetry>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.isort]
known_first_party = ["sonouno_server", "streamunolib"]

[[tool.mypy.overrides]]
module = [
    "decouple",
    "fastapi_jwt_auth.*",
    "fastapi_mail",
    "minio",
    "motor.*",
    "networkx",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
